# usb-filesync

./: .gitignore  Cargo.toml
src/: config.rs  main.rs  system_id.rs
